java tests pass
Signed-off-by: pyalex <moskalenko.alexey@gmail.com>